--- a/src/index.html
+++ b/src/index.html
@@ -15,38 +15,37 @@
       <h1 class='mid'>丁宁</h1>
 
       <p class="mid1">
-        女 | 22岁 | 前端开发工程师 | 深圳
-      </p class="mid2">
+        女 | 23岁 | 前端开发工程师 | 深圳
+      </p >
       <p>
         手机：<a class="ab" href="tel:13267790335">13267790335</a> | 微信：nding16 | 邮箱：<a class="ab"
           href="mailto:16nding@stu.edu.cn">16nding@gmail.com</a>
       </p>
-      <br>
-      <p>手机号和微信号都可以加到我的微信号，因为目前在职，不方便接电话。</p>
-      <p> 如果您方便的话，请<strong> 加微信</strong> 商讨面试详情</p>
+
+      <div class="page">
+        <p class="github">
+          <img src="./images/github.png" alt="" class="github-png">
+          <span class="github-name">Github：</span>
+          <a class='ab' href="https://github.com/vouis">https://github.com/vouis</a>
+        </p>
+        <p class="juejin">
+          <img src="./images/juejin.png" alt="" class="juejin-png">
+          <span class="juejin-name">博客：</span>
+          <a class='ab'
+           href="https://juejin.im/user/5e6766836fb9a07ca90c3d0d">https://juejin.im/user/5e6766836fb9a07ca90c3d0d</a>
+        </p>
+      </div>
     </section>
 
     <section class="education">
       <br>
-      <h2>个人信息</h2>
+      <h2>教育经历</h2>
       <p>
       <div>
         <time>2016年~2020年</time>
       </div>
       汕头大学 计算机系 本科</p>
-      <p>
-        <br>
-        <span>英语能力：</span>
-        CET-6</p>
-      <p>
-        <span>Github：</span>
-        <a class='ab' href="https://github.com/vouis">https://github.com/vouis</a>
-
-      <p>
-        <span>博客：</span>
-        <a class='ab'
-          href="https://juejin.im/user/5e6766836fb9a07ca90c3d0d">https://juejin.im/user/5e6766836fb9a07ca90c3d0d</a>
-      </p>
+        英语能力： CET-6
     </section>
 
     <section class="skills">
@@ -56,13 +55,50 @@
         熟悉HTML5和CSS页面布局技巧，Flex布局，能将设计稿<strong>完美还原</strong>
       </p>
       <p>
-        熟悉<strong>JavaScript</strong>技术，掌握闭包，原型，继承，DOM等特性,熟悉 ES6，包括 let / Promise / await / 析构赋值
+        熟悉<strong>JavaScript</strong>技术，掌握闭包，原型，继承，DOM等特性,熟悉 ES6，包括 let / Promise / await / 析构赋值，完成页面逻辑
       </p>
       <p>
         熟悉<strong>前后端分离</strong>技术，包括 AJAX、跨域、前端路由、Cookie、Session 等
       </p>
       <p>熟练掌握 <strong>React</strong>的使用，包括 Hooks、相关组件 antd等</p>
+      <p>熟悉 <strong>git</strong> 和 <strong>jenkins</strong> 代码发布部署流程</p>
+      <p>迅捷的沟通，良好的人际关系和<strong>团队合作</strong>精神，我可以与来自不同背景的人成功互动，确保并促进项目参与 </p>
+      <br>
+      <br>
+    </section>
 
+    <section class="projects">
+      <h2>工作经历</h2>
+      <ol>
+        <li>
+          <header>
+            <h3>从实习开始至今的公司--QTrade</h3>
+            <br>
+          </header>
+          <p><strong>2020.06--至今 </strong></p>
+
+          <h4>工作描述</h4>
+          <p>
+            该公司率先开发出基于腾讯企点互动平台，方便快捷的语义识别nlp的投标系统
+          <p>负责公司<strong>页面需求</strong>开发 </p>
+          </p>
+          <h4>参与以下项目：</h4>
+          <li><em>运营活动</em></li>
+          <p>开发H5抽奖活动页面，并兼容IE浏览器，成功推广新功能并为新功能增加日活。</p><strong>技术栈：vue</strong>
+          <li><em>和一创展业平台合作的联合平台</em></li>
+          <p>开发我司和一创展业平台的合作页面，使得用户可以在我司平台上投一创的标。</p><strong>技术栈：flex+react+ant design组件</strong>
+          <li><em>前端组件库网页部署</em></li>
+          <p>组件库官网页面优化与Jenkins构建，使组件库官网可以在开发环境展示，加强前端开发与UI的沟通效率。</p><strong>技术栈：webpack+Jenkins+gatsby+react</strong>
+          <li><em>企点首页债券推荐优化</em></li>
+          <p>用户首页推荐的债券支持查看该投标的历史投标数据，进行新建和修改，并实时同步数据更新。</p><strong>技术栈：flex+react+ant design组件+websocket</strong>
+          <li><em>配适并优化nlp识别弹窗</em></li>
+          <p>与同事合作，展示nlp识别的多条投标内容弹窗，使用户可以通过语义对多条投标进行新建与修改，该功能作为公司业务核心功能广受好评。</p><strong>技术栈：flex+react+ant design组件</strong>
+          <li><em>nlp手动录入弹窗</em></li>
+          <p>用户手动录入语料，展示nlp识别后语料。</p><strong>技术栈：flex+react+ant design组件</strong>
+
+        </li>
+
+      </ol>
     </section>
 
 
@@ -127,49 +163,6 @@
 
     <br>
     <br>
-                                                                                                                                                                                                                                         
-
-    <section class="projects">
-      <h2>工作经历</h2>
-      <ol>
-        <li>
-          <header>
-            <h3>QTrade</h3>
-          </header>
-          <p><strong>2020.06--至今, </strong> <strong>4个月</strong></p>
-
-          <h4>工作描述</h4>
-          <p>
-            负责公司页面需求开发
-          </p>
-          <p>参与以下项目：</p>
-          <p>1.ERP开发，将后台数据展示给运营人员。<strong>技术栈：flex+react+ant design组件</strong></p>
-          <p>2.H5抽奖活动页面开发，兼容IE。<strong>技术栈：vue</strong></p>
-          <p>3.客户端页面开发，还原设计稿展示后台数据。<strong>技术栈：flex+react+ant design组件</strong></p>
-
-
-        </li>
-        <li>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-
-
-        </li>
-
-      </ol>
-    </section>
-
-
-
-
-
-
-
-
-
 
   </article>
   <script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
