--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         熟悉HTML5和CSS页面布局技巧，Flex布局，能将设计稿<strong>完美还原</strong>
       </p>
       <p>
-        熟悉<strong>JavaScript</strong>技术，掌握闭包，原型，继承，DOM等特性,熟悉 ES6，包括 let / Promise / await / 析构赋值，完成页面逻辑
+        熟悉<strong>JavaScript</strong>技术，掌握闭包，原型，继承，DOM等特性,熟悉 ES6，包括 let / Promise / await / 析构赋值等
       </p>
       <p>
         熟悉<strong>前后端分离</strong>技术，包括 AJAX、跨域、前端路由、Cookie、Session 等
@@ -87,6 +87,7 @@
           <p>开发H5抽奖活动页面，并兼容IE浏览器，成功推广新功能并为新功能增加日活。</p><strong>技术栈：vue</strong>
           <li><em>和一创展业平台合作的联合平台</em></li>
           <p>开发我司和一创展业平台的合作页面，使得用户可以在我司平台上投一创的标。</p><strong>技术栈：flex+react+ant design组件</strong>
+        <span class="page2"></span>
           <li><em>前端组件库网页部署</em></li>
           <p>组件库官网页面优化与Jenkins构建，使组件库官网可以在开发环境展示，加强前端开发与UI的沟通效率。</p><strong>技术栈：webpack+Jenkins+gatsby+react</strong>
           <li><em>企点首页债券推荐优化</em></li>
@@ -138,24 +139,24 @@
           <br>
           <br>
 
-          <header>
-            <h3>盒子导航</h3>
-            <span>
-              <a href="https://github.com/vouis/box-nav" target="_blank">源码链接</a>
-              <a href="https://vouis.github.io/box-nav/dist/index.html" target="_blank">项目预览</a>
-            </span>
-          </header>
-          <img src="./images/box-nav.png" alt="" height="200" class="mimg">
-          <p>
-            这是一个基于 <strong>原生JavaScript</strong> 页面导航。
-          </p>
-          <p>
-            加入了百度的<strong>搜索功能</strong>
-          </p>
-          <p>
-            该系统通过浏览器<strong>Storage</strong>，本地<strong>保存网址数据</strong>。
-          </p>
-          <p><strong>技术栈： JavaScript+HTML5+LocalStorage+CSS3</strong></p>
+<!--          <header>-->
+<!--            <h3>盒子导航</h3>-->
+<!--            <span>-->
+<!--              <a href="https://github.com/vouis/box-nav" target="_blank">源码链接</a>-->
+<!--              <a href="https://vouis.github.io/box-nav/dist/index.html" target="_blank">项目预览</a>-->
+<!--            </span>-->
+<!--          </header>-->
+<!--          <img src="./images/box-nav.png" alt="" height="200" class="mimg">-->
+<!--          <p>-->
+<!--            这是一个基于 <strong>原生JavaScript</strong> 页面导航。-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            加入了百度的<strong>搜索功能</strong>-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            该系统通过浏览器<strong>Storage</strong>，本地<strong>保存网址数据</strong>。-->
+<!--          </p>-->
+<!--          <p><strong>技术栈： JavaScript+HTML5+LocalStorage+CSS3</strong></p>-->
         </li>
 
       </ol>
