feat: page break&& upload dist

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
           href="mailto:16nding@stu.edu.cn">16nding@gmail.com</a>
       </p>
 
+      <p>简历地址：<a class='ab' href="https://vouis.github.io/resume-cv/dist/index.html">https://vouis.github.io/resume-cv/dist/index.html</a></p>
+
       <div class="page">
         <p class="github">
           <img src="./images/github.png" alt="" class="github-png">
@@ -87,7 +89,7 @@
           <p>开发H5抽奖活动页面，并兼容IE浏览器，成功推广新功能并为新功能增加日活。</p><strong>技术栈：vue</strong>
           <li><em>和一创展业平台合作的联合平台</em></li>
           <p>开发我司和一创展业平台的合作页面，使得用户可以在我司平台上投一创的标。</p><strong>技术栈：flex+react+ant design组件</strong>
-        <span class="page2"></span>
+        <div class="page2"></div>
           <li><em>前端组件库网页部署</em></li>
           <p>组件库官网页面优化与Jenkins构建，使组件库官网可以在开发环境展示，加强前端开发与UI的沟通效率。</p><strong>技术栈：webpack+Jenkins+gatsby+react</strong>
           <li><em>企点首页债券推荐优化</em></li>
