feat: delete icon

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,11 @@
 
       <div class="page">
         <p class="github">
-          <img src="./images/github.png" alt="" class="github-png">
-          <span class="github-name">Github：</span>
+          <span>Github：</span>
           <a class='ab' href="https://github.com/vouis">https://github.com/vouis</a>
         </p>
         <p class="juejin">
-          <img src="./images/juejin.png" alt="" class="juejin-png">
-          <span class="juejin-name">博客：</span>
+          <span>博客：</span>
           <a class='ab'
            href="https://juejin.im/user/5e6766836fb9a07ca90c3d0d">https://juejin.im/user/5e6766836fb9a07ca90c3d0d</a>
         </p>
