--- a/src/index.html
+++ b/src/index.html
@@ -39,18 +39,26 @@
 
     <section class="education">
       <br>
-      <h2>教育经历</h2>
+      <h2>
+        <img src="./images/educate.png" alt="">
+        教育经历
+        <div/>
+      </h2>
       <p>
       <div>
-        <time>2016年~2020年</time>
+        <h3>汕头大学（2016年~2020年）</h3>
       </div>
-      汕头大学 计算机系 本科</p>
+      计算机系 本科</p>
         英语能力： CET-6
     </section>
 
     <section class="skills">
       <br />
-      <h2>技能</h2>
+      <h2>
+        <img src="./images/skill.png" alt="">
+        技能
+        <div/>
+      </h2>
       <p>
         熟悉HTML5和CSS页面布局技巧，Flex布局，能将设计稿<strong>完美还原</strong>
       </p>
@@ -68,7 +76,10 @@
     </section>
 
     <section class="projects">
-      <h2>工作经历</h2>
+      <h2>
+        <img src="./images/work.png" alt="">
+        工作经历
+      </h2>
       <ol>
         <li>
           <header>
@@ -106,7 +117,9 @@
     <section class="projects">
       <br>
       <br>
-      <h2>项目经历</h2>
+      <h2>
+        <img src="./images/project.png" alt="">
+        项目经历</h2>
       <ol>
         <li>
           <header>
